# StickerCutter

./: .gitignore  CMakeLists.txt  README.md  data.txt  data_2.txt  data_3.txt  main.c  reflectivity_charts.ods  sticker_cutter.c  sticker_cutter_BOM.ods  sticker_cutter_backup1.c
lcd/: LCDops.c  LCDops.h  ant_lcd.c  ant_lcd.h  display_20x4.c  display_20x4.h  generalOps.c  presetMessages.c
machine/: machine_automatic_mode.c  machine_automatic_mode.h  machine_controller.c  machine_controller.h  machine_manual_mode.c  machine_manual_mode.h  mark_detector.c  mark_detector.h
pcb/: StickerCutter.kicad_pcb  StickerCutter.kicad_prl  StickerCutter.kicad_pro  StickerCutter.kicad_sch  StickerCutter.net  development.fzz  fp-info-cache
pcb/HD44780/: 16026-16X2.kicad_mod  HD44780.bak  HD44780.kicad_sym  lcd20x4hd44780.igs
pcb/KiCad-RP-Pico-main/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
pcb/sticer_cutter_main/: sticer_cutter_main.kicad_prl  sticer_cutter_main.kicad_pro
pid/: PID.c  PID.h
pos_controller/: pos_controller.c  pos_controller.h
pwm/: servo_pwm.c  servo_pwm.h
python monitor/: python_monitor.py
servo_motor/: #quad_encoder.c  #quad_encoder.h  button.c  button.h  pos_controller.c  pos_controller.h  servo_motor.c  servo_motor.h  servo_pwm.c  servo_pwm.h
